--- a/app/views/spotlights/new.html.haml
+++ b/app/views/spotlights/new.html.haml
@@ -1,8 +1,8 @@
 :ruby
-  extra_css('scaffold')
+  extra_css('spotlight_forms')
+  extra_js('edit_bullet_point_collection','edit_qa_collection')
 
-%h1 New Spotlight
+%div.formC_700
+  %h1 New Spotlight
 
-= render 'form'
-
-= link_to 'Back', spotlights_path
+  = render 'form'
