Added js driven aspect of spotlight forms for social profile section. also renamed social media to social profile

--- a/app/views/shared/form/_edit_qa_collection.haml
+++ b/app/views/shared/form/_edit_qa_collection.haml
@@ -8,7 +8,7 @@
     %tr.answer{:id => "new_a"}
       %td.label Answer
       %td.input
-        %input{:type => :text, :value => '', :name => 'new_qa[0][answer]', :id => 'new_qa_0_answer'}
+        %textarea{:rows=>10, :cols=>20, :name=>'new_qa[0][answer]', :id=>'new_qa_0_answer'}
 
     %tr.spacer{:id => "new_s"}
       %td{:colspan=>2} &nbsp;
