--- a/app/views/spotlights/form/_about.haml
+++ b/app/views/spotlights/form/_about.haml
@@ -4,8 +4,8 @@
     -# The label has some css attached to it that botches jquery.model's understanding of the *real* height of the
     -# modal content, but only on the first load. if you reload the model a second time, it shows just fine. Anyway,
     -# just don't use a label here and we are fine.
-    -# = f.label :about_title, "'About' Title"
-    %strong About Title
+    -# = f.label :about_title, "Section Title"
+    %strong Section Title
     = f.text_field :about_title
 
   %strong Bullet Points
