--- a/app/views/spotlights/new.html.haml
+++ b/app/views/spotlights/new.html.haml
@@ -1,6 +1,6 @@
 :ruby
   extra_css('spotlight_forms')
-  extra_js('edit_bullet_point_collection','edit_qa_collection')
+  extra_js('edit_bullet_point_collection','edit_qa_collection','edit_social_profile_collection')
 
 %div.formC_700
   %h1 New Spotlight
