--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -321,7 +321,7 @@ hr.guides_spacer {
 /* ------------------ Admin Boxes Options ----------------- */
 div#content div.admin {
     float : right;
-    font-size : .75em;
+    font-size : 12px;
     line-height : 2em;
     color : #7FB86B;
     margin-right : 18px;
