--- a/public/stylesheets/sass/spotlight.scss
+++ b/public/stylesheets/sass/spotlight.scss
@@ -3,6 +3,7 @@
 @import "form_validations";
 @import "share_article_on";
 @import "jquery.slider";
+@import "pagination";
 
 
 #menuC { margin-bottom : 4px; }
