--- a/public/stylesheets/sass/spotlight_forms.scss
+++ b/public/stylesheets/sass/spotlight_forms.scss
@@ -1,5 +1,6 @@
 @import "form_basics";
 @import "edit_qa_collection";
 @import "spotlight_about_form";
+@import "social_profile_form";
 
 @import "form_validations";
