--- a/app/views/layouts/application/_footer.haml
+++ b/app/views/layouts/application/_footer.haml
@@ -18,11 +18,13 @@
       = render 'shared/delimeter'
       = link_to 'Contact Us', contacts_path
       = render 'shared/delimeter'
-      %div#f_signin
-        - if user_signed_in?
-          = link_to "Sign out", destroy_user_session_path
-        - else
-          = raw "#{link_to "Sign up", new_user_registration_path} or #{link_to "sign in", new_user_session_path}"
+
+      - if user_signed_in?
+        = link_to "Account", edit_user_registration_path
+        = render 'shared/delimeter'
+        = link_to "Sign out", destroy_user_session_path
+      - else
+        = raw "#{link_to "Sign up", new_user_registration_path} or #{link_to "sign in", new_user_session_path}"
 
 
   %div#f_right.yui3-u-3-8
