--- a/public/stylesheets/sass/_share_article_on.scss
+++ b/public/stylesheets/sass/_share_article_on.scss
@@ -1,19 +1,15 @@
-@mixin rts_sprite($x, $y, $h, $w) {
-    background : url(/images/sprites/social_contact.png) no-repeat scroll #{$x}px #{$y}px transparent;
-    height : #{$h}px;
-    width  : #{$w}px;
-}
+@import "helpers";
 
-#twitterL  { @include rts_sprite(  0,   0, 44, 44); }
-#linkedinL { @include rts_sprite(-44,   0, 44, 44); }
-#youtubeL  { @include rts_sprite(  0, -45, 44, 44); }
-#facebookL { @include rts_sprite(-44, -45, 44, 44); }
+#twitterL  { @include sprite('social_contact',   0,   0, 44, 44); }
+#linkedinL { @include sprite('social_contact', -44,   0, 44, 44); }
+#youtubeL  { @include sprite('social_contact',   0, -45, 44, 44); }
+#facebookL { @include sprite('social_contact', -44, -45, 44, 44); }
 
-#envelopeS { @include rts_sprite(  0, -91, 14, 15); }
-#facebookS { @include rts_sprite(-18, -91, 14, 14); }
-#twitterS  { @include rts_sprite(-34, -91, 14, 15); }
-#youtubeS  { @include rts_sprite(-51, -91, 14, 15); }
-#linkedinS { @include rts_sprite(-68, -91, 14, 15); }
+#envelopeS { @include sprite('social_contact',   0, -91, 14, 15); }
+#facebookS { @include sprite('social_contact', -18, -91, 14, 14); }
+#twitterS  { @include sprite('social_contact', -34, -91, 14, 15); }
+#youtubeS  { @include sprite('social_contact', -51, -91, 14, 15); }
+#linkedinS { @include sprite('social_contact', -68, -91, 14, 15); }
 
 .share_article_onC {
     text-align : right;
@@ -26,11 +22,10 @@
     font-weight : bold;
 }
 .share_article_onC .shareC {
+    @include corners(5);
     line-height : 10px;
-    background-color : #F0F3DA;
-    border-radius : 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
+    background-color : $wheat;
+    border : 1px solid $light_green;
     padding : 4px 8px;
 /*    width : 64px;*/
     float : right;
