--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,7 +1,9 @@
 :ruby
+  extra_css('scaffold')
   title = "Edit #{resource_name.to_s.humanize}"
   header(:title, title)
   page_title title
+
 
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
   = render :partial => 'shared/user_notice', :locals => {:model_obj => resource}
@@ -12,7 +14,7 @@
     = f.text_field :email
   %p
     = f.label :password
-    %i (leave blank if you don't want to change it)
+    %i :: leave blank if you don't want to change it
     %br/
     = f.password_field :password
   %p
@@ -21,7 +23,7 @@
     = f.password_field :password_confirmation
   %p
     = f.label :current_password
-    %i (we need your current password to confirm your changes)
+    %i :: we need your current password to confirm your changes
     %br/
     = f.password_field :current_password
   %p= f.submit "Update"
