--- a/public/stylesheets/sass/_seller_signup.scss
+++ b/public/stylesheets/sass/_seller_signup.scss
@@ -1,3 +1,5 @@
+@import "helpers";
+
 /* Start Sprites */
 .sprite { background : url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px 500px transparent; }
 #lock_icon  {
@@ -88,9 +90,7 @@ form#new_seller_listing div#state.field, form#new_seller_listing input#seller_li
     width : 230px;
 }
 .seller_signup_boxC  #securityC {
-    display : inline-block;
-    zoom : 1;
-    *display : inline;
+    @include inline_block();
     font-size : .9em;
     color : #666;
     position : relative;
