--- a/public/stylesheets/sass/form_basics.scss
+++ b/public/stylesheets/sass/form_basics.scss
@@ -19,6 +19,14 @@ h3 {
     margin-bottom : 10px;
 }
 
+label {
+    color : $dark_grey;
+    font-weight : bold;
+}
+i {
+    color : $grey;
+}
+
 
 /* FIELD elements */
 .field {
@@ -26,8 +34,6 @@ h3 {
 }
 .field label {
     display : block;
-    color : $dark_grey;
-    font-weight : bold;
 }
 .field label[data-type="checkbox"] {
     display : inline;
