--- a/public/stylesheets/sass/new_seller_listing.scss
+++ b/public/stylesheets/sass/new_seller_listing.scss
@@ -1,3 +1,4 @@
+@import "helpers";
 @import "form_validations";
 
 /* Start Sprites */
@@ -99,9 +100,7 @@ form#new_seller_listing div#last_name.field {
     padding-top : 12px;
 }
 .submitC #securityC {
-    display : inline-block;
-    zoom : 1;
-    *display : inline;
+    @include inline_block();
     font-size : .9em;
     color : #666;
     position : relative;
