--- a/public/stylesheets/sass/guides.scss
+++ b/public/stylesheets/sass/guides.scss
@@ -2,6 +2,7 @@
 @import "pagination";
 @import "seller_signup";
 @import "form_validations";
+@import "boxed_resource_list";
 
 #menuC { margin-bottom : 12px; }
 #mainC div#tab_arrow {
@@ -35,14 +36,6 @@ h1 a { color : inherit; }
     width : 110px;
     margin : 10px 0 0 0;
 }
-#books {
-    float : left;
-    background : url(/images/sprites/guides.png) no-repeat scroll -112px 0px transparent;
-    height : 45px;
-    width : 39px;
-    margin : 0 10px 0 0;
-}
-
 
 div#left_col hr.space {
     margin : 0 0 50px 0;
@@ -61,37 +54,6 @@ div.article_body {
 div.article_body p {
     padding-bottom : 1em;
 }
-
-.box div.gutter {
-/*    padding : 17px 0 12px 15px;*/
-}
-div#other_guidesC {
-    margin : 0 15px;
-}
-div#other_guidesC .titleC {
-    min-height : 45px;
-    margin-bottom : 5px;
-}
-div#other_guidesC h3.orange {
-    line-height : 39px;
-}
-div#other_guidesC ul {
-    margin-left : 15px;
-}
-div#other_guidesC li {
-    float : left;
-    list-style : disc outside none;
-    color : #53aa47;
-    font-size : .8em;
-    width : 30%;
-    margin-right : 3%;
-    margin-bottom : 5px;
-
-}
-div#other_guidesC li a {
-    color : #7A7A7A;
-}
-
 
 
 
