--- a/public/stylesheets/sass/_share_article_on.scss
+++ b/public/stylesheets/sass/_share_article_on.scss
@@ -25,7 +25,7 @@
     @include corners(5);
     line-height : 10px;
     background-color : $wheat;
-    border : 1px solid $light_green;
+/*    border : 1px solid $light_green;*/
     padding : 4px 8px;
 /*    width : 64px;*/
     float : right;
