--- a/app/views/spotlights/show/_teaser.haml
+++ b/app/views/spotlights/show/_teaser.haml
@@ -1,8 +1,11 @@
 %div#teaserC.clearfix
-  = image_tag spotlight.photo.url(:medium), :id => 'main_spotlight_image'
+  %div#main_spotlight_imageC
+    = image_tag spotlight.photo.url(:medium), :id => 'main_spotlight_image'
+    = render :partial => 'shared/blogs/share_article_on', :locals => {:object => spotlight}
 
   %h2.green= spotlight.title
   %p= spotlight.teaser
 
-  = render :partial => 'shared/blogs/share_article_on', :locals => {:object => spotlight}
+  
+
 
