--- a/public/stylesheets/sass/spotlight.scss
+++ b/public/stylesheets/sass/spotlight.scss
@@ -46,7 +46,7 @@ div#spotlightC p {
     font-size : .85em;
     line-height : 1.6em;
 }
-#teaserC #main_spotlight_image {
+#teaserC #main_spotlight_imageC {
     padding : 0 20px 20px 0;
     float : left;
 }
